# Robotrading

./: .env.example  .gitignore  Dockerfile  INVESTMENT_ANALYSIS_1K.md  Pasted-Error-fetching-top-performers-Screener-object-has-no-attribute-get-day-gainers-AI-AI-just-now-1733410773590.txt  Pasted-I-ll-modify-the-get-top-performers-function-to-include-NYSE-NYA-along-with-the-other-major-indi-1733411215496.txt  Pasted-TypeError-Invalid-comparison-between-dtype-datetime64-ns-America-New-York-and-Timestamp-AI-AI-j-1733407673532.txt  Pasted-You-re-absolutely-right-Instead-of-using-a-static-list-of-stocks-we-should-fetch-the-top-stocks-dy-1733410549778.txt  README_IBKR.md  README_MULTI_ASSET.md  README_STABILITY_IMPROVEMENTS.md  STOP_LOSS_IMPLEMENTATION_SUMMARY.md  advanced_stop_loss.py  bond_trader.py  check_test_status.py  config.yaml  config_manager.py  crypto_trader.py  data_cache.py  deploy.sh  diagnose_scheduler.py  docker-compose.yml  health_check.py  ibkr_client.py  logging_config.py  main.py  portfolio_manager.py  portfolio_monitor.py  pyproject.toml  requirements.txt  retry_utils.py  robotrading.py  robotrading_improved.py  run_continuously.sh  scheduler_service.py  setup_live_trading.py  test_advanced_stop_loss.py  test_ibkr.py  test_no_email_stop_loss.py  test_scheduled_run.py  (+4 more)
services/: async_queue.py  email_templates.py  persistence.py
