[project]
name = "repl-nix-stockmarketinsights"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "nltk>=3.9.1",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-levenshtein>=0.26.0",
    "scikit-learn>=1.5.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.39.0",
    "ta>=0.11.0",
    "tensorflow>=2.14.0",
    "textblob>=0.18.0.post0",
    "yfinance==0.2.46",
]
